# TextToSpeach

./: .env  .env.example  .gitignore  README.md  external_stt.py  main.py  pyproject.toml
speach_tasks/: __init__.py  external_tts.py  local_stt.py  local_tts.py  vad.py
speech_tasks/: external_stt.py  external_tts.py  local_tts.py
